DeveloperOrg/force-app/main/default/objects/card__c/card__c.object-meta.xml
<CustomObject>
    <label>card</label>
    <nameField>
        <label>card Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>