DeveloperOrg/force-app/main/default/objects/card__c/fields/ChangeDate__c.field-meta.xml
<CustomField>
    <fullName>ChangeDate__c</fullName>
    <label>ChangeDate</label>
    <type>DateTime</type>
</CustomField>