DeveloperOrg/force-app/main/default/objects/card__c/fields/name__c.field-meta.xml
<CustomField>
    <fullName>name__c</fullName>
    <displayFormat>C-{0000}</displayFormat>
    <label>name</label>
    <type>AutoNumber</type>
</CustomField>